fix runtime deployment

--- a/libsa.linux-x64/linux-x64.csproj
+++ b/libsa.linux-x64/linux-x64.csproj
@@ -43,7 +43,8 @@
         <None Include="libsa.so">
             <Pack>True</Pack>
             <PackageCopyToOutput>True</PackageCopyToOutput>
-            <PackagePath>runtimes/linux-x64/native/</PackagePath>
+            <PackagePath>runtimes/linux-x64/native/libsa.so</PackagePath>
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
             <Link>%(Identity)</Link>
         </None>
     </ItemGroup>
