--- a/sockaddr.Net/StirlingLabs.sockaddr.Net.targets
+++ b/sockaddr.Net/StirlingLabs.sockaddr.Net.targets
@@ -14,8 +14,9 @@
         <Message Importance="high" Text="StirlingLabsSockaddrNetVersion BEFORE: $(StirlingLabsSockaddrNetVersion)"/>
         -->
         <PropertyGroup>
-            <!--<StirlingLabsSockaddrNetVersion Condition="'%(PackageReference.Identity)' == 'StirlingLabs.sockaddr.Net'">%(PackageReference.Version)</StirlingLabsSockaddrNetVersion>-->
             <StirlingLabsSockaddrNetVersion>@(PackageReference->WithMetadataValue('Identity','StirlingLabs.sockaddr.Net')->Metadata('Version'))</StirlingLabsSockaddrNetVersion>
+            <StirlingLabsSockaddrNetVersion Condition="'$(StirlingLabsSockaddrNetVersion)'=='' AND '%(PackageReference.Identity)' == 'StirlingLabs.sockaddr.Net'">%(PackageReference.Version)</StirlingLabsSockaddrNetVersion>
+            <StirlingLabsSockaddrNetVersion Condition="'$(StirlingLabsSockaddrNetVersion)'==''">*</StirlingLabsSockaddrNetVersion>
             <StirlingLabsSockaddrNetSelectRuntimeId Condition="'$(StirlingLabsSockaddrNetSelectRuntimeId)'==''">$(RuntimeIdentifier)</StirlingLabsSockaddrNetSelectRuntimeId>
             <StirlingLabsSockaddrNetSelectRuntimeId Condition="'$(StirlingLabsSockaddrNetSelectRuntimeId)'==''">$(DefaultAppHostRuntimeIdentifier)</StirlingLabsSockaddrNetSelectRuntimeId>
             <StirlingLabsSockaddrNetSelectRuntimeId Condition="'$(StirlingLabsSockaddrNetSelectRuntimeId)'==''">$(NETCoreSdkPortableRuntimeIdentifier)</StirlingLabsSockaddrNetSelectRuntimeId>
